[tool.poetry]
name = "score_sde_pytorch"
version = "0.1.0"
description = "score sde pytorch"
authors = ["Yang Song"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
